Fix misalignment with search bar in search-embed view

--- a/frontend/src/views/searchView/styles.module.less
+++ b/frontend/src/views/searchView/styles.module.less
@@ -38,6 +38,7 @@
   justify-content: center;
 
   &.filtersButton {
+    display: flex;
 
     .searchBarContainer {
       display: flex;
